fix: "fixed the centre alignment of marks for each steps"

--- a/src/components/Sliders/SliderBar.css
+++ b/src/components/Sliders/SliderBar.css
@@ -70,7 +70,7 @@
 
 .Slider-mark-for-each-step {
   transform: translateX(-50%);
-  top: -0.74rem;
+  top: -0.7rem;
   position: absolute;
   /* background: #c7b9fa; */
   background: #000000;
